--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         </p>
     </main>
     <footer>
-        <p>This project was coded by Tati Italmazava, is open-sourced on GitHub and hosted on Netlify</p>
+        <p>This project was coded by <a href="https://github.com/Tatiit17" target="_blank">Tati Italmazava</a>
+            , is open-sourced on
+            <a href="https://github.com/Tatiit17/final-weather-app" target="_blank">GitHub</a>
+            and hosted on
+            <a href="https://tati-meteo-app.netlify.app/" target="_blank">Netlify</a>
+        </p>
     </footer>
 
 </body>
