Updated html to a new design

--- a/index.html
+++ b/index.html
@@ -15,10 +15,17 @@
         </form>
     </header>
     <main>
-        <h1>Berlin</h1>
+        <h1>Poznan</h1>
         <p>
-            Thursday 21:42, clear sky
-            Humidity: 90%, Wind: 3.09km/h
+        <div>
+            Saturday, 20 January 21:42,
+            cloudy
+        </div>
+        <div>☁️1°C</div>
+        <div>Low/High: 21° / 31°
+            Humidity: 92%
+            Wind: 2.06km/h
+        </div>
         </p>
     </main>
     <footer>
