Styled main container and added font

--- a/index.html
+++ b/index.html
@@ -4,38 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Rubik+Bubbles&family=Whisper&display=swap"
+        rel="stylesheet">
     <title>My weather app</title>
 </head>
 
 <body>
-    <header>
-        <form class="search-form">
-            <input type="search" placeholder="Enter a city..">
-            <input type="submit" value="search">
-        </form>
-    </header>
-    <main>
-        <h1>Poznan</h1>
-        <p>
-        <div>
-            Saturday, 20 January 21:42,
-            cloudy
-        </div>
-        <div>☁️1°C</div>
-        <div>Low/High: 21° / 31°
-            Humidity: 92%
-            Wind: 2.06km/h
-        </div>
-        </p>
-    </main>
-    <footer>
-        <p>This project was coded by <a href="https://github.com/Tatiit17" target="_blank">Tati Italmazava</a>
-            , is open-sourced on
-            <a href="https://github.com/Tatiit17/final-weather-app" target="_blank">GitHub</a>
-            and hosted on
-            <a href="https://tati-meteo-app.netlify.app/" target="_blank">Netlify</a>
-        </p>
-    </footer>
+    <div class="weather-app">
+        <header>
+            <form class="search-form">
+                <input type="search" placeholder="Enter a city..">
+                <input type="submit" value="search">
+            </form>
+        </header>
+        <main>
+            <h1>Poznan</h1>
+            <p>
+            <div>
+                Saturday, 20 January 21:42,
+                cloudy
+            </div>
+            <div>☁️1°C</div>
+            <div>Low/High: 21° / 31°
+                Humidity: 92%
+                Wind: 2.06km/h
+            </div>
+            </p>
+        </main>
+
+        <footer>
+            <p>This project was coded by <a href="https://github.com/Tatiit17" target="_blank">Tati Italmazava</a>
+                , is open-sourced on
+                <a href="https://github.com/Tatiit17/final-weather-app" target="_blank">GitHub</a>
+                and hosted on
+                <a href="https://tati-meteo-app.netlify.app/" target="_blank">Netlify</a>
+            </p>
+        </footer>
+    </div>
 
 </body>
 
