styled header and footer

--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
     <div class="weather-app">
         <header>
             <form class="search-form">
-                <input type="search" placeholder="Enter a city..">
-                <input type="submit" value="search">
+                <input type="search" placeholder="Enter a city.." class="search-input">
+                <input type="submit" value="Search" class="search-button">
             </form>
         </header>
         <main>
             <h1>Poznan</h1>
-            <p>
             <div>
-                Saturday, 20 January 21:42,
-                cloudy
+                <p class="weather-app-current">
+                    <span>Saturday, 20 January 21:42</span>
+                    <br>
+                    <span>Cloudy</span>
+                </p>
             </div>
-            <div>☁️1°C</div>
-            <div>Low/High: 21° / 31°
-                Humidity: 92%
-                Wind: 2.06km/h
+            <div>
+                <div>☁️1°C</div>
+                <div>Low/High: 21° / 31°
+                    Humidity: 92%
+                    Wind: 2.06km/h
+                </div>
             </div>
-            </p>
+
         </main>
 
         <footer>
