Styled main part

--- a/index.html
+++ b/index.html
@@ -30,13 +30,32 @@
                     <span>Cloudy</span>
                 </p>
             </div>
-            <div>
-                <div>☁️1°C</div>
-                <div>Low/High: 21° / 31°
-                    Humidity: 92%
-                    Wind: 2.06km/h
+            <div class="weather-app-data">
+                <div class="weather-app-temperature-container">
+                    <div class="weather-app-icon"><img
+                            src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png">
+                    </div>
+                    <div class="today-temperature">17</div>
+                    <div class="weather-app-unit">°C</div>
+                </div>
+                <div>
+                    <p class="weather-app-details">
+                        Low/High:
+                        <strong>
+                            <span class="today-minimum">21°</span>
+                            /
+                            <span class="today-maximum">27°</span>
+                        </strong>
+                        <br>
+                        Humidity:
+                        <strong>93%</strong>
+                        <br>
+                        Wind
+                        <strong>1.03km/h</strong>
+                    </p>
                 </div>
             </div>
+
 
         </main>
 
