--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <div class="weather-app">
         <header>
-            <form class="search-form">
-                <input type="search" placeholder="Enter a city.." class="search-input">
+            <form class="search-form" id="search-form">
+                <input type="search" placeholder="Enter a city.." class="search-input" id="search-input">
                 <input type="submit" value="Search" class="search-button">
             </form>
         </header>
         <main>
-            <h1>Poznan</h1>
+            <h1 id="city">Poznan</h1>
             <div>
                 <p class="weather-app-current">
                     <span>Saturday, 20 January 21:42</span>
@@ -68,7 +68,7 @@
             </p>
         </footer>
     </div>
-
+    <script src="src/index.js"></script>
 </body>
 
 </html>
