--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </main>
 
         <footer>
-            <p>This project was coded by <a href="https://github.com/Tatiit17" target="_blank">Tati Italmazava</a>
+            <p>This project was coded by <a href="https://github.com/Tatiit17" target="_blank">Tati Italmazava🤍</a>
                 , is open-sourced on
                 <a href="https://github.com/Tatiit17/final-weather-app" target="_blank">GitHub</a>
                 and hosted on
