Added JS to city and temp elements

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </form>
         </header>
         <main>
-            <h1 id="city">Poznan</h1>
+            <h1 id="city"></h1>
             <div>
                 <p class="weather-app-current">
                     <span>Saturday, 20 January 21:42</span>
@@ -36,7 +36,7 @@
                     <div class="weather-app-icon"><img
                             src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png">
                     </div>
-                    <div class="today-temperature">17</div>
+                    <div class="today-temperature" id="temperature"></div>
                     <div class="weather-app-unit">°C</div>
                 </div>
                 <div>
