Added API to weather conditions

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <h1 id="city"></h1>
             <div>
                 <p class="weather-app-current">
-                    <span>Saturday, 20 January 21:42</span>
+                    <span id="time"></span>
                     <br>
-                    <span>Cloudy</span>
+                    <span id="description"></span>
                 </p>
             </div>
             <div class="weather-app-data">
@@ -41,18 +41,14 @@
                 </div>
                 <div>
                     <p class="weather-app-details">
-                        Low/High:
-                        <strong>
-                            <span class="today-minimum">21°</span>
-                            /
-                            <span class="today-maximum">27°</span>
-                        </strong>
+                        Feels like:
+                        <strong id="feels-like"></strong>
                         <br>
                         Humidity:
-                        <strong>93%</strong>
+                        <strong id="humidity"></strong>
                         <br>
                         Wind
-                        <strong>1.03km/h</strong>
+                        <strong id="wind">km/h</strong>
                     </p>
                 </div>
             </div>
