--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             </div>
             <div class="weather-app-data">
                 <div class="weather-app-temperature-container">
-                    <div class="weather-app-icon"><img
-                            src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png">
+                    <div class="weather-app-icon" id="icon">
                     </div>
                     <div class="today-temperature" id="temperature"></div>
                     <div class="weather-app-unit">°C</div>
